tests/ui/attributes/z-crate-attr/multiple.stderr
error: expected `]`, found `,`
  --> <crate attribute>:1:16
   |
LL | #![feature(foo),feature(bar)]
   |                ^ expected `]`

error: aborting due to 1 previous error

